.deployment/base/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: site-magicnonsense

spec:
  template:
    spec:
      containers:
        - name: site-magicnonsense
          image: ghcr.io/strootje/site-magicnonsense:main
          securityContext:
            seccompProfile: { type: RuntimeDefault }
            allowPrivilegeEscalation: false
            capabilities: { drop: [ALL] }
            runAsNonRoot: true
          imagePullPolicy: Always
          ports: [{ name: http, containerPort: 3000, protocol: TCP }]
          # env:
          #   - { name: SMTP_PORT, value: "25" }
          #   - { name: SMTP_SUBJECT, value: New submission on magic-nonsense.com }
          #   - { name: SMTP_HOST, value: prd-smtpmail.strooweb-system.svc.cluster.local }
          #   - { name: SMTP_FROM, value: Magic-Nonsense.com <noreply-magic-nonsense@strooware.nl> }
          #   - { name: SMTP_TO, value: contact@magic-nonsense.com }
      serviceAccountName: magicnonsense
  revisionHistoryLimit: 1
  replicas: 1
