.deployment/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: website-magicnonsense
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: acme-letsencrypt-production

spec:
  rules:
    - host: magic.strootje.com
      http:
        paths:
          - { path: /, backend: { service: { name: website-magicnonsense, port: { name: http } } }, pathType: Prefix }
  tls: [{ hosts: [magic.strootje.com], secretName: prd-website-magicnonsense-certs }]
  ingressClassName: traefik
